# kernelci-api

./: .gitignore  .pylintrc  README.md  create_admin_user  dev-docker-compose.yaml  docker-compose.yaml  env.sample  init_user_groups  pyproject.toml  run_e2e_tests.sh  test-docker-compose.yaml
.github/workflows/: main.yml  test.yml
admin/: _sample_settings.py  kci_admin.py
api/: __init__.py  admin.py  auth.py  client.py  config.py  db.py  email_sender.py  main.py  maintenance.py  metrics.py  models.py  paginator_models.py  pubsub.py  pubsub_mongo.py  test_api.py  user_manager.py  user_models.py
api/static/: __init__.py
api/static/css/: __init__.py  viewer.css
api/static/js/: __init__.py  viewer.js
api/templates/: accept-invite.html  analytics.html  dashboard.html  email-verification-successful.jinja2  email-verification.jinja2  index.html  invite-accepted.jinja2  invite-email.jinja2  invite.html  manage.html  reset-password-successful.jinja2  reset-password.jinja2  stats.html  viewer.html
doc/: _index.md  api-details.md  design.md  developer-documentation.md  early-access.md  events-migration.md  getting-started.md  local-instance.md  overview.md  pipeline-details.md  staging.md  usermanager.toml
docker/: docker-compose.yaml
docker/api/: Dockerfile  Dockerfile.production  installPackagesDev.sh  requirements-dev.txt  requirements-tests.txt  requirements.txt
docker/ssh/: Dockerfile  sshd_config
docker/storage/config/: default.conf
docker/storage/data/: README.txt
docker/test/: Dockerfile  requirements.txt
e2e_tests/: conftest.py  listen_handler.py  test_count_handler.py  test_node_handler.py  test_pipeline.py  test_pubsub_handler.py  test_root_handler.py  test_subscribe_handler.py  test_user_creation.py
kube/aks/: README.md  api.yaml  configmap.yaml.example  ingress.yaml  mongo.yaml  redis.yaml
kube/minikube/: README.md  api-deployment.yaml
kube/minikube/configmap/: api-configmap.yaml
kube/minikube/deployments/: db-deployment.yaml  redis-deployment.yaml  ssh-deployment.yaml  storage-deployment.yaml
kube/minikube/init/: init-pod.yaml
kube/minikube/pvc/: db-pvc.yaml
kube/minikube/scripts/: apply-all.sh  setup_admin_user.sh
kube/minikube/services/: api-service.yaml  db-service.yaml
kube/minkube/: README.md  api-deployment.yaml
kube/minkube/deployments/: db-deployment.yaml  redis-deployment.yaml  ssh-deployment.yaml  storage-deployment.yaml
kube/minkube/hack/: apply-all.sh  clean-all.sh  deleterepo.yaml
kube/minkube/init/: init-job.yaml  init-pod.yaml
kube/minkube/pvc/: db-pvc.yaml
kube/minkube/services/: api-service.yaml  db-service.yaml  redis-service.yaml  ssh-service.yaml  storage-service.yaml
migrations/: 20221014061654_set_timeout.py  20231102101356_user.py  20231215122000_node_models.py  20240319103200_node_paths.py  20240325150000_regression_field_name_change.py
scripts/: run_e2e_tests.sh  run_local_checks.sh  run_unit_tests.sh  setup_admin_user  usermanager.py
test/: conftest.py  test_api.py  test_count_handler.py  test_listen_handler.py  test_me_handler.py  test_node_handler.py  test_pubsub.py  test_root_handler.py  test_subscribe_handler.py  test_token_handler.py  test_unsubscribe_handler.py  test_user_handler.py
tests/e2e_tests/: conftest.py  listen_handler.py  test_count_handler.py  test_node_handler.py  test_password_handler.py  test_pipeline.py  test_pubsub_handler.py  test_regression_handler.py  test_root_handler.py  test_subscribe_handler.py  test_unsubscribe_handler.py  test_user_creation.py  test_user_group_creation.py  test_user_group_handler.py  test_user_invite.py
tests/unit_tests/: conftest.py  test_authz_handler.py  test_count_handler.py  test_db.py  test_dual_secret_jwt.py  test_events_handler.py  test_listen_handler.py  test_me_handler.py  test_node_handler.py  test_pubsub.py  test_root_handler.py  test_subscribe_handler.py  test_telemetry_handler.py  test_token_handler.py  test_unsubscribe_handler.py  test_user_group_handler.py  test_user_handler.py  test_whoami_handler.py
