# SPDX-License-Identifier: LGPL-2.1-or-later
#
# Copyright (C) 2023, 2024 Collabora Limited
# Author: Guillaume Tucker <guillaume.tucker@collabora.com>
# Author: Jeny Sadadia <jeny.sadadia@collabora.com>

[project]
name = "kernelci-api"
version = "0"
description = "KernelCI API"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "LGPL-2.1-or-later"}
dependencies = [
  "cloudevents == 1.9.0",
  "fastapi[all] == 0.99.1",
  "fastapi-pagination == 0.9.3",
  "fastapi-users[beanie, oauth] == 10.4.0",
  "fastapi-versioning == 0.10.0",
  "MarkupSafe == 2.0.1",
  "motor == 3.6.0",
  "pymongo == 4.9.0",
  "passlib == 1.7.4",
  "pydantic == 1.10.13",
  "pymongo-migrate == 0.11.0",
  "python-jose[cryptography] == 3.3.0",
  "redis == 5.0.1",
  "uvicorn[standard] == 0.29.0",
]

[project.optional-dependencies]
tests = [
  "fakeredis == 2.20.0",
  "pytest == 6.2.5",
  "pytest-asyncio == 0.16.0",
  "pytest-dependency == 0.5.1",
  "pytest-mock == 3.6.1",
  "pytest-order == 1.0.1",
  "httpx == 0.23.3",
  "mongomock_motor == 0.0.21",
]
dev = [
  "kernelci-api[tests]",
  "pycodestyle == 2.8.0",
  "pylint == 3.1.0",
]

[project.urls]
Homepage = "https://kernelci.org"
Documentation = "https://docs.kernelci.org"
Repository = "https://github.com/kernelci/kernelci-api"

[tool.setuptools]
packages = ["api", "scripts", "api.templates", "migrations"]

[tool.setuptools.package-data]
scripts = ["*"]
"api.templates" = ["*.jinja2", "*.html", "*.png"]
migrations = ["*.py"]
