# SPDX-License-Identifier: LGPL-2.1-or-later
#
# Copyright (C) 2023, 2024 Collabora Limited
# Author: Guillaume Tucker <guillaume.tucker@collabora.com>
# Author: Jeny Sadadia <jeny.sadadia@collabora.com>

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kernelci-api"
version = "0"
description = "KernelCI API"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "LGPL-2.1-or-later"}
dependencies = [
  "cloudevents == 2.0.0",
  "beanie == 2.1.0",
  "fastapi[all] == 0.136.1",
  "fastapi-pagination == 0.15.12",
  "fastapi-users[beanie, oauth] == 15.0.5",
  "fastapi-users-db-beanie == 5.0.0",
  "MarkupSafe == 2.0.1",
  "pymongo == 4.16.0",
  "passlib == 1.7.4",
  "pydantic == 2.9.2",
  "pymongo-migrate == 1.0.0",
  "python-jose[cryptography] == 3.5.0",
  "redis == 7.4.0",
  "uvicorn[standard] == 0.44.0",
]

[project.optional-dependencies]
tests = [
  "fakeredis == 2.34.1",
  "pytest == 9.0.3",
  "pytest-asyncio == 0.16.0",
  "pytest-dependency == 0.6.1",
  "pytest-mock == 3.15.1",
  "pytest-order == 1.3.0",
  "httpx >= 0.27.0, < 1.0.0",
]
dev = [
  "kernelci-api[tests]",
  "ruff >= 0.9.0",
  "pre-commit >= 4.0.0",
]

[project.urls]
Homepage = "https://kernelci.org"
Documentation = "https://docs.kernelci.org"
Repository = "https://github.com/kernelci/kernelci-api"

[tool.setuptools]
packages = ["api", "scripts", "api.templates", "api.static", "api.static.css", "api.static.js", "migrations"]

[tool.setuptools.package-data]
scripts = ["*"]
"api.templates" = ["*.jinja2", "*.html", "*.png"]
"api.static.css" = ["*.css"]
"api.static.js" = ["*.js"]
migrations = ["*.py"]

# Ruff — used by CI and pre-commit hooks
[tool.ruff]
target-version = "py310"
# Soft limit for formatter wrapping
line-length = 80

[tool.ruff.lint]
# Ruff defaults (E, F, W) plus import sorting and complexity checking
select = ["E", "F", "W", "I", "C901"]

[tool.ruff.lint.pycodestyle]
# Hard limit — lines beyond this are errors regardless of formatter
max-line-length = 110

[tool.ruff.lint.per-file-ignores]
# Legacy high-complexity entrypoints, to be refactored incrementally
"api/main.py" = ["C901"]
"scripts/usermanager.py" = ["C901"]
